--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.14.0",
+    "cloudinary": "^1.41.2",
     "cloudinary-react": "^1.8.1",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "sass": "^1.69.5"
+    "react-sortablejs": "^6.1.4",
+    "sass": "^1.69.5",
+    "sortablejs": "^1.15.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
