--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.14.0",
-    "@sendgrid/mail": "^8.1.0",
     "cloudinary": "^1.41.2",
     "cloudinary-react": "^1.8.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-sortablejs": "^6.1.4",
     "sass": "^1.69.5",
-    "sortablejs": "^1.15.1"
+    "sortablejs": "^1.15.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
