--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.20.1",
     "react-sortablejs": "^6.1.4",
+    "react-spring-lightbox": "^1.8.0",
     "sass": "^1.69.5",
     "sortablejs": "^1.15.1",
     "uuid": "^9.0.1"
@@ -28,6 +30,7 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
