--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-sortablejs": "^6.1.4",
     "react-spring-lightbox": "^1.8.0",
